fix配方/狂飙 + 材质更新 (#250)